# JYCVideoPlayer

./: .gitignore  README.md  build.gradle  gradle.properties  settings.gradle
app/: build.gradle
app/src/androidTest/java/god/jyc/videoplayer/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  jyc-player.cpp  native-lib.cpp
app/src/main/cpp/player/: FFPlayer.cpp  FFPlayer.h
app/src/main/cpp/player/decoder/: BaseDecoder.h
app/src/main/java/god/jyc/videoplayer/: App.kt
app/src/main/java/god/jyc/videoplayer/component/player/: FFPlayer.kt  JYCPlayer.kt
app/src/main/java/god/jyc/videoplayer/model/: Frame.kt
app/src/main/java/god/jyc/videoplayer/repo/: VideoRepo.kt
app/src/main/java/god/jyc/videoplayer/view/: MainActivity.kt  MainViewModel.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/god/jyc/videoplayer/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
